@@ -46,6 +46,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21321: itertools.islice() now releases the reference to the source
+  iterator when the slice is exhausted.  Patch by Anton Afanasyev.
+
 - Issue #9291: Do not attempt to re-encode mimetype data read from registry in
   ANSI mode. Initial patches by Dmitry Jemerov & Vladimir Iofik.
 
